<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_app_name"
        android:textColor="@color/deep_moss"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/editItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#37474F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        app:layout_constraintVertical_bias="0.103"
        tools:ignore="LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Category"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItem"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtTotalItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/total_items_packed_0"
        android:textColor="@color/deep_moss"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="259dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCategory"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Comments"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuantity"
        app:layout_constraintVertical_bias="0.147"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/muted_sage"
        android:text="@string/add_gear"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnLoadEssentials"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComments" />

    <Button
        android:id="@+id/btnLoadEssentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/muted_sage"
        android:text="@string/load_essentials"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/muted_sage"
        android:text="@string/view_packing_list"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintWidth_max="320dp" />
</androidx.constraintlayout.widget.ConstraintLayout>